--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: minima
 
+title: Computational Tools for Biological Research
+  
 author:
-  name: Luhui Zhang, Fei Sun
+  name: Luhui Zhang & Fei Sun
   email: "zhang.luhui@mayo.edu"
