--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,19 @@
-theme: minima
-
 title: Computational Tools for Biological Research
   
 author:
   name: Luhui Zhang & Fei Sun
   email: "zhang.luhui@mayo.edu"
+  
+description: >
+  The mouse grouping tool is designed to efficiently organize mice into multiple groups 
+  while ensuring that each group exhibits consistent means and variances in body weight. 
+  Additionally, it aims to minimize the need for intermixing mice from different housing 
+  cages (minimizing mouse order changes as shown in the results given by the app), thereby 
+  optimizing the handling and care of the mice.
+
+theme: minima
+
+minima:
+header_pages:
+  - about.md
+show_excerpts: false
