--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Computational Tools for Biomedical Research
-  
+title: Mouse Grouping Tool
+#Computational Tools for Biomedical Research
 author:
   name: Luhui Zhang, Fei Sun
   email: "zhang.luhui@mayo.edu"
