--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Mouse Grouping Tool
 
 author:
-  name: Luhui Zhang, Fei Sun
+  name: Luhui Zhang
   email: "zhang.luhui@mayo.edu"
   
 description: >
- Computational Tools for Biomedical Research
+  Computational Tools for Biomedical Research
 
 theme: minima
 
