--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Mouse Grouping Tool
+title: Mouse Grouping Tool - Test
 
 author:
   name: Luhui Zhang
@@ -8,5 +8,3 @@ description: >
   Computational Tools for Biomedical Research
 
 theme: minima
-
-minima:
